--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "aqua-astrae",
-  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "openai": "^4.56.0",
+    "next": "14.2.33",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  }
+    "react-dom": "^18.3.1",
+    "openai": "^4.60.0"
+  },
+  "engines": { "node": ">=18.17" }
 }
+
